--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "babel-preset-react": "^6.16.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.7.1",
     "immutable": "^3.8.1",
     "moment": "^2.17.1",
     "phoenix": "file:deps/phoenix",
